# gpu-programming

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  mma  mma.cu  requirements.txt  saxpy  saxpy.cu  setup.sh  test.cu
src/: fastmm.cu  fastmm.cuh  main.cu  mm.cu  mm.cuh  saxpy.cu  saxpy.cuh  saxpy_streams.cu
src/utils/: cuda.cuh  mat.cu  mat.cuh  type.cu  type.cuh
tests/: test_fastmm.cu  test_mm.cu  test_saxpy.cu
